--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,22 @@
     padding: 18px 40px;
 }
 
+.btn-call {
+    height: 55px;
+    border-radius: 5px;
+    color: white;
+    background-color: black;
+    font-size: 20px;
+    font-weight: 700;
+    border: 0;
+    padding: 18px 45px;
+    position: absolute;
+    /* width: 160px; */
+    /* height: 64px; */
+    left: 220px;
+    top: 2360px;
+}
+
 .btn-Contact {
     border-radius: 5px;
     color: white;
@@ -177,4 +193,206 @@ li {
 
 .plan-des {
     color: #737272
+}
+
+/*  watch image and gradient  styles */
+.image {
+    margin-left: 140px;
+    margin-top: 130px;
+    margin-bottom: 130px;
+    border-radius: 8px;
+    background-image: url("../images/watch.png");
+
+}
+
+.img-text {
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 47px;
+    position: absolute;
+    width: 459px;
+    height: 94px;
+    left: 220px;
+    top: 2230px;
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.footer section,
+.footer-main {
+    background: #151414;
+    height: 60vh;
+    display: flex;
+    padding: 50px 0px;
+}
+
+.footer-main-info {
+    margin: 20px 30px;
+
+}
+
+.future-section {
+    margin: 20px 100px;
+    width: 500px;
+}
+
+.future-head {
+    font-weight: 700;
+    font-size: 45px;
+    color: #F8F8F8;
+    margin-bottom: 15px;
+    margin-left: 70px;
+}
+
+.future-info {
+    font-weight: 400;
+    font-size: 16px;
+    color: #FFFFFF;
+    margin-left: 70px;
+    margin-top: 30px;
+    text-align: left;
+
+}
+
+.future-email {
+    font-weight: 700;
+    font-size: 16px;
+    color: #FFFFFF;
+    margin-left: 70px;
+    margin-top: 30px;
+}
+
+.future-phone {
+    font-weight: 700;
+    font-size: 16px;
+    color: #FFFFFF;
+    margin-left: 70px;
+    margin-top: 12px;
+}
+
+.main-icon-container {
+    display: flex;
+    margin-left: 70px;
+    margin-top: 30px;
+}
+
+.sub-icon {
+    width: 40px;
+    height: 40px;
+    margin-left: 8px;
+    margin-right: 15px;
+
+}
+
+.subscribe-main-info {
+    color: #FFFFFF;
+    margin-left: 175px;
+    /* margin-top: 35px; */
+/* margin-right: 150px; */
+font-weight: 900;
+font-size: 16px;
+margin-top: 45px;
+ text-align: left; } 
+
+.subscribe-section {
+    margin-top: 30px;
+}
+
+.subscribe-head {
+    font-weight: 900;
+    font-size: 30px;
+    color: #FFFFFF;
+    margin-bottom: 30px;
+    ;
+}
+
+.subscribe-container>input {
+    width: 290px;
+    height: 60px;
+    background-color: #151414;
+    border: 1px solid white;
+    margin: 10px 0;
+    border-radius: 10px;
+}
+
+#email {
+    font-size: 15px;
+    text-align: left;
+    font-weight: bolder;
+    margin-right: 10px;
+    background-color:black;
+    border-radius: 10px;
+    /* border: 10px; */
+    border-color: white;
+    padding: 20px;
+    
+
+}
+/* input: placeholder {
+    font-weight: bold;
+    opacity: 0.5;
+    color:white} */
+
+
+.subscribe-section>button {
+    color: #F15B22;
+    font-size: 18px;
+    font-weight: bolder;
+    margin: 10px 5px;
+    border: none;
+    border-radius: 5px;
+    
 }
