--- a/styles/index.css
+++ b/styles/index.css
@@ -28,8 +28,6 @@
     border: 0;
     padding: 18px 45px;
     position: absolute;
-    /* width: 160px; */
-    /* height: 64px; */
     left: 220px;
     top: 2360px;
 }
@@ -186,7 +184,6 @@ li {
 
 .plan-header {
     font-weight: 700;
-    /* font-size: 30px; */
     line-height: 35px;
     text-align: center
 }
@@ -217,60 +214,7 @@ li {
     color: white;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* footer section styles */
 .footer section,
 .footer-main {
     background: #151414;
@@ -340,15 +284,15 @@ li {
 .subscribe-main-info {
     color: #FFFFFF;
     margin-left: 175px;
-    /* margin-top: 35px; */
-/* margin-right: 150px; */
-font-weight: 900;
-font-size: 16px;
-margin-top: 45px;
- text-align: left; } 
+    font-weight: 900;
+    font-size: 16px;
+    margin-top: 45px;
+    text-align: left;
+}
 
 .subscribe-section {
     margin-top: 30px;
+    color: white;
 }
 
 .subscribe-head {
@@ -373,26 +317,20 @@ margin-top: 45px;
     text-align: left;
     font-weight: bolder;
     margin-right: 10px;
-    background-color:black;
+    background-color: black;
     border-radius: 10px;
-    /* border: 10px; */
     border-color: white;
     padding: 20px;
-    
-
 }
-/* input: placeholder {
-    font-weight: bold;
-    opacity: 0.5;
-    color:white} */
 
-
-.subscribe-section>button {
+.sub-btn {
+    margin-bottom: 500px;
     color: #F15B22;
     font-size: 18px;
     font-weight: bolder;
-    margin: 10px 5px;
+    margin-left: 2px;
+    margin-top: 20px;
     border: none;
-    border-radius: 5px;
-    
+    border-radius: 10px;
+    padding: 20px 35px;
 }
